--- a/src/components/Job.scss
+++ b/src/components/Job.scss
@@ -23,4 +23,17 @@
       width: 100%;
     }
   }
+  ul.sub-listing {
+    padding: 0;
+
+    li {
+      padding: 0;
+
+      &.list-type:before {
+        content: '-';
+        display: inline-block;
+        width: 12px;
+      }
+    }
+  }
 }
